--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "release": "vue-cli-service electron:build -wml --x64 --arm64"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "2.3.15",
     "@mdi/font": "^7.2.96",
     "async-lock": "^1.4.0",
     "axios": "^1.4.0",
     "compare-versions": "^6.0.0-rc.1",
     "core-js": "^3.31.0",
     "electron-builder": "^24.4.0",
+    "element-plus": "2.3.6",
     "github-markdown-css": "^5.2.0",
     "highlight.js": "^11.8.0",
     "langchain": "0.0.97",
